<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <Button
	        android:id="@+id/findContact"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/new_addressee" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/nameLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/name" />
	
	        <EditText
	            android:id="@+id/nameTyped"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="textPersonName" >
	
	        </EditText>
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/phoneLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/phone" />
	
	        <EditText
	            android:id="@+id/phoneTyped"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="phone" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/dateLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/date" />
	
	        <DatePicker
	            android:id="@+id/datePicker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/timeLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/time" />
	
	        <TimePicker
	            android:id="@+id/timePicker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="vertical">
	
	        <TextView
	            android:id="@+id/messageLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/message" />
	        
	        <EditText
	            android:id="@+id/messageTyped"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="textMultiLine"
	            android:height="150dp"
	            android:maxLength="140"
	            android:gravity="top" />
		
		</LinearLayout>
	
	    <Button
	        android:id="@+id/addSchedule"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add_schedule" />
	
	</LinearLayout>

</ScrollView>